# mistai-news-agent

./: README.md  pyproject.toml
src/: app.py  config.py  utils.py
src/services/: analyzer.py  base.py  fetchers.py
