[project]
name="mistai-news-agent"
version="0.1.0"
dependencies = [
    "python-dotenv",
    "fastapi[standard]",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "gnews",
    "googlenewsdecoder>=0.1.6",
    "newspaper4k>=0.9.3.1",
    "lxml[html-clean]>=5.3.0",
    "transformers>=4.47.1",
    "tensorflow>=2.18.0",
    "tf-keras>=2.18.0",
]
